force-app/main/default/objects/Account/fields/CSK__c.field-meta.xml
<CustomField>
    <fullName>CSK__c</fullName>
    <label>CSK</label>
    <length>10</length>
    <type>Text</type>
</CustomField>