force-app/main/default/objects/Account/fields/Dhani__c.field-meta.xml
<CustomField>
    <fullName>Dhani__c</fullName>
    <label>Dhani</label>
    <type>Phone</type>
</CustomField>