force-app/main/default/objects/Account/fields/EasyTestFld__c.field-meta.xml
<CustomField>
    <fullName>EasyTestFld__c</fullName>
    <label>EasyTestFld</label>
    <length>10</length>
    <type>Text</type>
</CustomField>