force-app/main/default/objects/Account/fields/EMI__c.field-meta.xml
<CustomField>
    <fullName>EMI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EMI</label>
    <type>Checkbox</type>
</CustomField>