force-app/main/default/objects/Account/fields/KKR__c.field-meta.xml
<CustomField>
    <fullName>KKR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KKR</label>
    <type>Checkbox</type>
</CustomField>