force-app/main/default/objects/Account/fields/QA_Field__c.field-meta.xml
<CustomField>
    <fullName>QA_Field__c</fullName>
    <label>QA Field</label>
    <length>20</length>
    <type>Text</type>
</CustomField>