force-app/main/default/objects/Account/fields/RCB__c.field-meta.xml
<CustomField>
    <fullName>RCB__c</fullName>
    <label>RCB</label>
    <length>10</length>
    <type>Text</type>
</CustomField>