force-app/main/default/objects/Account/fields/sachin_accfld__c.field-meta.xml
<CustomField>
    <fullName>sachin_accfld__c</fullName>
    <label>sachin_accfld</label>
    <length>20</length>
    <type>Text</type>
</CustomField>