force-app/main/default/objects/Account/fields/SRH__c.field-meta.xml
<CustomField>
    <fullName>SRH__c</fullName>
    <label>SRH</label>
    <length>10</length>
    <type>Text</type>
</CustomField>