force-app/main/default/objects/Account/recordTypes/TestAgain.recordType-meta.xml
<RecordType>
    <fullName>TestAgain</fullName>
    <active>true</active>
    <label>TestAgain</label>
</RecordType>